dataset1235/2025-2/1379599236/users/2397405626/executions/831076482_3788368433.log
== RUN (2025-08-11 19:04:44)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Engenharia Física")

# Impressao de saidas
print(input)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
Engenharia Física<built-in function input>
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
Engenharia Física<built-in function input>
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
Engenharia Física<built-in function input>
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
Engenharia Física<built-in function input>
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
Engenharia Física<built-in function input>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-11 19:04:36)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Engenharia Física")

# Impressao de saidas
print(var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
Engenharia FísicaGandalf
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
Engenharia FísicaDonald Knuth
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
Engenharia FísicaPython
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
Engenharia FísicaAda Lovelace
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
Engenharia FísicaTeste
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-11 19:00:14)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = "Engenharia Física"

# Impressao de saidas
print(var)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
Engenharia Física
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
Engenharia Física
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
Engenharia Física
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
Engenharia Física
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
Engenharia Física
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-11 19:07:36)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input()

# Impressao de saidas
print(var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
Gandalf
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
Donald Knuth
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
Python
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
Ada Lovelace
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-11 19:03:02)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = "Engenharia Física."

# Impressao de saidas
print(var)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
Engenharia Física.
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
Engenharia Física.
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
Engenharia Física.
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
Engenharia Física.
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
Engenharia Física.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-11 19:04:46)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Engenharia Física")

# Impressao de saidas
print(input)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
Engenharia Física<built-in function input>
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
Engenharia Física<built-in function input>
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
Engenharia Física<built-in function input>
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
Engenharia Física<built-in function input>
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
Engenharia Física<built-in function input>
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-11 19:00:13)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = "Engenharia Física"

# Impressao de saidas
print(var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
Engenharia Física
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
Engenharia Física
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
Engenharia Física
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
Engenharia Física
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
Engenharia Física
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-11 19:07:09)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input()

# Impressao de saidas
print(var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
Gandalf
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
Donald Knuth
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
Python
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
Ada Lovelace
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-11 19:06:28)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Engenharia Física")

# Impressao de saidas
print(var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
Engenharia FísicaGandalf
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
Engenharia FísicaDonald Knuth
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
Engenharia FísicaPython
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
Engenharia FísicaAda Lovelace
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
Engenharia FísicaTeste
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-11 19:00:58)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Engenharia Física")

# Impressao de saidas
print(var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
Engenharia FísicaGandalf
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
Engenharia FísicaDonald Knuth
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
Engenharia FísicaPython
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
Engenharia FísicaAda Lovelace
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
Engenharia FísicaTeste
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-11 19:04:48)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Engenharia Física")

# Impressao de saidas
print(input)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
Engenharia Física<built-in function input>
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
Engenharia Física<built-in function input>
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
Engenharia Física<built-in function input>
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
Engenharia Física<built-in function input>
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
Engenharia Física<built-in function input>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-11 19:02:52)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = "Engenharia Física"

# Impressao de saidas
print(var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
Engenharia Física
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
Engenharia Física
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
Engenharia Física
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
Engenharia Física
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
Engenharia Física
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-11 19:03:03)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = "Engenharia Física."

# Impressao de saidas
print(var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
Engenharia Física.
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
Engenharia Física.
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
Engenharia Física.
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
Engenharia Física.
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
Engenharia Física.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-11 18:59:38)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = "Engenharia Física"

# Impressao de saidas
print(var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
Engenharia Física
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
Engenharia Física
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
Engenharia Física
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
Engenharia Física
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
Engenharia Física
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-11 19:02:26)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Engenharia Física")

# Impressao de saidas
print(var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
Engenharia FísicaGandalf
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
Engenharia FísicaDonald Knuth
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
Engenharia FísicaPython
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
Engenharia FísicaAda Lovelace
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
Engenharia FísicaTeste
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-11 19:02:31)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Engenharia Física")

# Impressao de saidas
print(var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
Engenharia FísicaGandalf
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
Engenharia FísicaDonald Knuth
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
Engenharia FísicaPython
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
Engenharia FísicaAda Lovelace
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
Engenharia FísicaTeste
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-11 19:02:54)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = "Engenharia Física"

# Impressao de saidas
print(var)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
Engenharia Física
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
Engenharia Física
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
Engenharia Física
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
Engenharia Física
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
Engenharia Física
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-11 19:08:18)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input()

# Impressao de saidas
print(var)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
Gandalf
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
Donald Knuth
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
Python
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
Ada Lovelace
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-11 19:00:46)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input(Engenharia Física)

# Impressao de saidas
print(var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
File "XXXX", line 4
    var = input(Engenharia Física)
                ^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
File "XXXX", line 4
    var = input(Engenharia Física)
                ^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
File "XXXX", line 4
    var = input(Engenharia Física)
                ^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
File "XXXX", line 4
    var = input(Engenharia Física)
                ^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
File "XXXX", line 4
    var = input(Engenharia Física)
                ^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-11 19:07:32)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input()

# Impressao de saidas
print(var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
Gandalf
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
Donald Knuth
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
Python
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
Ada Lovelace
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
